fix(@clayui/css): LPD-34319 Dual List Box disabled styles when wrapped in fieldset[disabled]

--- a/packages/clay-css/src/scss/cadmin/components/_forms.scss
+++ b/packages/clay-css/src/scss/cadmin/components/_forms.scss
@@ -131,10 +131,13 @@ fieldset[disabled] label {
 
 // This adds disabled styles to div.form-control inside a disabled fielset.
 
-fieldset[disabled] .form-control {
-	$disabled: setter(map-get($cadmin-input, disabled), ());
+fieldset[disabled] {
+	select.form-control[multiple],
+	.form-control {
+		$disabled: setter(map-get($cadmin-input, disabled), ());
 
-	@include clay-css($disabled);
+		@include clay-css($disabled);
+	}
 }
 
 // Readonly controls as plain text
