--- a/packages/clay-css/src/scss/cadmin/variables/_forms.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_forms.scss
@@ -1326,6 +1326,13 @@ $cadmin-input-select-size: map-deep-merge(
 				),
 			),
 		),
+		disabled: (
+			option: (
+				hover: (
+					background-image: none,
+				),
+			),
+		),
 		option: (
 			padding: 7px 8px,
 			checked: (
